# hoot

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: content.rs  engine.rs  main.rs  model.rs
content/: games.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  Host.svelte  Player.svelte  Player.test.ts  main.ts  styles.css
frontend/src/lib/: Countdown.svelte  connection.ts  types.ts
